--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hercules - Become your own personal trainer</title>
+    <title>Delhi Hacks</title>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="src/css/bootstrap.min.css" rel="stylesheet" >
@@ -16,11 +16,13 @@
     <header id="header-section"></header>
     
     <main class="main wrapper">
-        <section class="section section-basic" id="app-section"></section>
+        
         <section class="section section-basic" id="product-preview-section"></section>
-        <section class="section section-basic" id="review-section"></section>
+
         <section class="section section-basic" id="pre-order-section"></section>
+        <section class="section section-basic" id="app-section"></section>
         <section class="section section-basic" id="mailchimp-section"></section>
+        <section class="section section-basic" id="review-section"></section>
     </main>
 
     <footer class="footer wrapper" id="footer-section"></footer>
