--- a/partial_views/appPartial.html
+++ b/partial_views/appPartial.html
@@ -5,19 +5,13 @@
                         <div class="container">
                               <div class="row">
                                     <div class="col-sm-12 col-md-6">
-                                          <img class="" src="src/img/Application1.png" alt="" />
+                                          <img class="" src="src/img/app.png" alt="" />
                                     </div>
                                     <div class="col-sm-12 col-md-6">
-                                          <h1 class="pt-5">Profile</h1>
+                                          <h1 class="pt-5">WHAT IS A HACKATHON?
+                                        </h1>
                                           <hr>
-                                          <p class="pt-3">Easy to use accessible interface. You can view your daily and overall goals including your own targets, you'll have access to : </p>
-                                          <ul>
-                                                <li>Running schedule</li>
-                                                <li>Gym appointments</li>
-                                                <li>Cardiovascular statistics</li>
-                                                <li>Diet helper</li>
-                                                <li>Your own daily customizable goals</li>
-                                          </ul>
+                                          <p class="pt-3">Hackathons provide a venue for self-expression and creativity through technology. People with technical backgrounds come together, form teams around a problem or idea, and collaboratively code a unique solution from scratch — these generally take shape in the form of websites, mobile apps, and robots. Hackathons give participants the chance to develop skills and products that have real-world uses</p>
                                     </div>
                               </div>
                         </div>
@@ -26,12 +20,13 @@
                         <div class="container">
                               <div class="row">
                                     <div class="col-sm-12 col-md-6">
-                                          <img class="" src="src/img/Application2.png" alt="" />
+                                          <img class="" src="src/img/app.png" alt="" />
                                     </div>
                                     <div class="col-sm-12 col-md-6">
-                                          <h1 class="pt-5">History</h1>
+                                          <h1 class="pt-5">WHO CAN PARTICIPATE?
+</h1>
                                           <hr>
-                                          <p class="pt-3">Do you keep forgetting the reps or weights you did last time you trained chest? We made a workout tracker that stores exactly what you've done so you no longer need to spend energy on recalling!</p>
+                                          <p class="pt-3">synHacks’ hackathons are geared towards High School and College students. However, any student who is in school or recently graduated may participate! (no matter the age or location)</p>
                                     </div>
                               </div>
                         </div>
@@ -40,12 +35,12 @@
                         <div class="container">
                               <div class="row">
                                     <div class="col-sm-12 col-md-6">
-                                          <img class="" src="src/img/Application3.png" alt="" />
+                                          <img class="" src="src/img/app.png" alt="" />
                                     </div>
                                     <div class="col-sm-12 col-md-6">
-                                          <h1 class="pt-5">Tracker</h1>
+                                          <h1 class="pt-5">DO I NEED A TEAM?</h1>
                                           <hr>
-                                          <p class="pt-3">Once we've made your workout plan, you can customize the amount of reps you've done or the weights you picked, our algorithms will update your workout plan based on the given information to guarentee the best results, every time!</p>
+                                          <p class="pt-3">No teams are not required. Teams can be made up of 1-6 people. For those who don’t have a team but want one, there will be a team building workshop after opening session!</p>
                                     </div>
                               </div>
                         </div>
@@ -54,14 +49,13 @@
                         <div class="container">
                               <div class="row">
                                     <div class="col-md-6">
-                                          <img class="" src="src/img/Application4.png" alt="" />
+                                          <img class="" src="src/img/app.png" alt="" />
                                     </div>
                                     <div class="col-md-6">
-                                          <h1 class="pt-5">Stats</h1>
+                                          <h1 class="pt-5">ARE THERE PRIZES?
+</h1>
                                           <hr>
-                                          <p class="pt-3">Love to see progress as much as we do?
-                                                <br> You can simply choose a plan you're following and review all your statistics ,you can sort per day, week or even month.
-                                                <br> Research has shown that visually seeing progress will motivate you even more!</p>
+                                          <p class="pt-3">Yes! For our expanding list of prizes, please see above. We are working with sponsors to offer prizes for our Winners and Participants. Stay tuned!</p>
                                     </div>
                               </div>
                         </div>
@@ -70,13 +64,12 @@
                         <div class="container">
                               <div class="row">
                                     <div class="col-md-6">
-                                          <img class="" src="src/img/Application5.png" alt="" />
+                                          <img class="" src="src/img/app.png" alt="" />
                                     </div>
                                     <div class="col-md-6">
-                                          <h1 class="pt-5">Settings</h1>
+                                          <h1 class="pt-5">WHY SHOULD I JOIN?</h1>
                                           <hr>
-                                          <p class="pt-3">We can generate workout plans for everyone's desire. Simply tell us what gym you use and we'll know the equipment you can use right away!
-                                                <br><br> Go to the settings page and tell us your goals and position, we'll do the rest!</p>
+                                          <p class="pt-3">With five different tracks including environment, health, education, inequality, and poverty, participants will be able to work with other youths all over the world to solve various issues. Through this supportive community, attendees advance their programming/technical knowledge.</p>
                                     </div>
                               </div>
                         </div>
