--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" id="navbar">
       <div class="container">
             <div class="navbar-translate">
-                  <a class="navbar-brand" onclick="scrollToElement('#header-section', 400);">Hercules</a>
+                  <a class="navbar-brand" onclick="scrollToElement('#header-section', 400);">Delhi Hacks</a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse">
                         <span class="navbar-toggler-bar bar1"></span>
                         <span class="navbar-toggler-bar bar1"></span>
@@ -10,12 +10,13 @@
             </div>
             <div class="collapse navbar-collapse justify-content-end">
                   <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#app-section', 600);">Application</a></li>
-                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#product-preview-section', 600);">Content</a></li>
-                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#review-section', 600);">Reviews</a></li>
-                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#pre-order-section', 600);">Buy</a></li>
-                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#mailchimp-section', 600);">Subscribe</a></li>
+                     
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#product-preview-section', 600);">Themes</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#review-section', 600);">Oraganizers</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#pre-order-section', 600);">Prizes</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#mailchimp-section', 600);">Register</a></li>
                         <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#footer-section', 600);">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#app-section', 600);">FAQ's</a></li>
                   </ul>
             </div>
       </div>
@@ -24,9 +25,12 @@
 <div class="page-header clear-filter page-header-image wrapper">
       <div class="container">
             <div class="content-center brand">
-                  <img class="n-logo mt-5" src="src/img/logo.png" alt="">
-                  <h1 class="h1-seo">Hercules</h1>
-                  <h3>Become your own personal trainer</h3>
+                  <img class="n-logo mt-5" src="src/img/DELHI.png" alt="">
+                  <h1 class="h1-seo">Delhi Hacks</h1>
+                  <h3>Indias's biggest Hackathon</h3>
+                 <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
+            <input class="btn btn-info btn-lg" type="submit" value="Register">
+      </form>
             </div>
       </div>
 </div>
