--- a/partial_views/mailchimpPartial.html
+++ b/partial_views/mailchimpPartial.html
@@ -1,8 +1,17 @@
 <div class="container text-center">
-      <img class="n-logo" src="src/img/logo.png" alt="">
-      <h1>Never miss a thing...</h1>
-      <p>We at Hercules work very hard to make sure you get the latest advancements on fitness and health.<br> Subscribe to us for our latest updates!</p>
-      <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
-            <input class="btn btn-danger btn-lg" type="submit" value="Subscribe">
-      </form>
+<!--      <img class="n-logo" src="src/img/logo.png" alt="">-->
+      <h1>Our Sponsors</h1>
+     <div class="row py-5">
+            <div class="review-container py-5">
+    <img class="  mt-4 review-image new-items" src="src/img/sponsors.png" alt="" />
+                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.png" alt="" />
+
+                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.png" alt="" />
+
+                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.png" alt="" />
+
+                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.png" alt="" />
+
+         </div>
+    </div>
 </div>
