--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -28,7 +28,7 @@
                   <img class="n-logo mt-5" src="src/img/DELHI.png" alt="">
                   <h1 class="h1-seo">Delhi Hacks</h1>
                   <h3>Indias's biggest Hackathon</h3>
-                 <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
+                 <form action="https://delhihacks.devpost.com/" method="post" target="_blank">
             <input class="btn btn-info btn-lg" type="submit" value="Register">
       </form>
             </div>
