--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -14,7 +14,7 @@
                         <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#product-preview-section', 600);">Themes</a></li>
                         <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#review-section', 600);">Oraganizers</a></li>
                         <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#pre-order-section', 600);">Prizes</a></li>
-                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#mailchimp-section', 600);">Register</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://delhihacks.devpost.com/?">Register</a></li>
                         <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#footer-section', 600);">Contact</a></li>
                         <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#app-section', 600);">FAQ's</a></li>
                   </ul>
