--- a/partial_views/mailchimpPartial.html
+++ b/partial_views/mailchimpPartial.html
@@ -3,14 +3,14 @@
       <h1>Our Sponsors</h1>
      <div class="row py-5">
             <div class="review-container py-5">
-    <img class="  mt-4 review-image new-items" src="src/img/sponsors.png" alt="" />
-                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.png" alt="" />
+    <img class="  mt-4 review-image new-items" src="src/img/sponsors.jpg" alt="" />
+                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.jpg" alt="" />
 
-                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.png" alt="" />
+                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.jpg" alt="" />
 
-                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.png" alt="" />
+                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.jpg" alt="" />
 
-                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.png" alt="" />
+                    <img class="  mt-4 review-image new-items p-2" src="src/img/sponsors.jpg" alt="" />
 
          </div>
     </div>
