--- a/partial_views/reviewPartial.html
+++ b/partial_views/reviewPartial.html
@@ -2,7 +2,7 @@
     <h1 class="pt-5">Our Organizers</h1>
     <h5>Thank you! So much for your help!</h5>
     <div class="row py-5">
-        <div class="review-container py-5">
+        <div class="review-container py-5"  style="text-align: center;">
             <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team1.jpg" alt="" />
             <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team2.jpg" alt="" />
 
