--- a/partial_views/footerPartial.html
+++ b/partial_views/footerPartial.html
@@ -12,6 +12,6 @@
             <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i class="fab fa-instagram"></i></a>
             <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i class="fab fa-github"></i></a>
             <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"><i class="fab fa-linkedin"></i></a>
-            <p class="copyright mt-4 pt-1">&copy; Designed by Script</p>
+            <p class="copyright mt-4 pt-1">&copy; Designed by Delhi Hacks</p>
       </div>
 </div>
