--- a/partial_views/footerPartial.html
+++ b/partial_views/footerPartial.html
@@ -1,17 +1,23 @@
 <div class="container">
       <div class="row footer-subjects">
-           
-</div>
 
-<hr class="footer-divider" />
-
-<div class="container">
-      <div class="social-media-bar">
-            <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"><i class="fab fa-facebook-square"></i></a>
-            <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i class="fab fa-twitter"></i></a>
-            <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i class="fab fa-instagram"></i></a>
-            <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i class="fab fa-github"></i></a>
-            <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"><i class="fab fa-linkedin"></i></a>
-            <p class="copyright mt-4 pt-1">&copy; Designed by Delhi Hacks</p>
       </div>
-</div>
+
+      <hr class="footer-divider" />
+
+      <div class="container">
+            <div class="social-media-bar">
+                  <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"><i
+                              class="fab fa-facebook-square"></i></a>
+                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i
+                              class="fab fa-twitter"></i></a>
+                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i
+                              class="fab fa-instagram"></i></a>
+                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i
+                              class="fab fa-github"></i></a>
+                  <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"
+                        href="https://www.linkedin.com/company/script-foundation-india/"><i
+                              class="fab fa-linkedin"></i></a>
+                  <p class="copyright mt-4 pt-1">&copy; Designed by Delhi Hacks</p>
+            </div>
+      </div>
