--- a/partial_views/footerPartial.html
+++ b/partial_views/footerPartial.html
@@ -1,3 +1,4 @@
+
 <div class="container">
       <div class="row footer-subjects">
 
@@ -7,17 +8,17 @@
 
       <div class="container">
             <div class="social-media-bar">
-                  <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"><i
+                  <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"
+                        href="https://www.facebook.com/scriptfoundationindia/"><i
                               class="fab fa-facebook-square"></i></a>
-                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i
-                              class="fab fa-twitter"></i></a>
-                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i
-                              class="fab fa-instagram"></i></a>
-                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"><i
-                              class="fab fa-github"></i></a>
+
+                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"
+                        href="https://www.instagram.com/script_foundation/"><i class="fab fa-instagram"></i></a>
+                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"
+                        href="https://github.com/topics/script-foundation"><i class="fab fa-github"></i></a>
                   <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"
                         href="https://www.linkedin.com/company/script-foundation-india/"><i
                               class="fab fa-linkedin"></i></a>
-                  <p class="copyright mt-4 pt-1">&copy; Designed by Delhi Hacks</p>
+                  <p class="copyright mt-4 pt-1">&copy; Designed by Script</p>
             </div>
       </div>
