--- a/partial_views/footerPartial.html
+++ b/partial_views/footerPartial.html
@@ -13,12 +13,13 @@
 
                   <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"
                         href="https://www.instagram.com/script_foundation/"><i class="fab fa-instagram"></i></a>
-                  <a class="btn btn-neutral btn-icon btn-twitter btn-round btn-lg ml-3"
-                        href="https://github.com/topics/script-foundation"><i class="fab fa-github"></i></a>
+                 
                   <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"
                         href="https://www.linkedin.com/company/script-foundation-india/"><i
                               class="fab fa-linkedin"></i></a>
-                  <p class="copyright mt-4 pt-1"><img src="../logo.png" &copy; Designed by Script</p>
+                  <p class="copyright mt-4 pt-1"><img src="../logo.png"> &copy; Designed by Script</p>
             </div>
       </div>
+
+
 
