--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -1,3 +1,4 @@
+
 <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" id="navbar">
       <div class="container">
             <div class="navbar-translate">
@@ -27,7 +28,7 @@
             <div class="content-center brand">
                   <img class="n-logo mt-5" src="src/img/DELHI.png" alt="">
                   <h1 class="h1-seo">Delhi Hacks</h1>
-                  <h3>Indias's biggest Hackathon</h3>
+                  <h3>India's biggest Hackathon</h3>
                  <form action="https://delhihacks.devpost.com/" method="get" target="_blank">
             <input class="btn btn-info btn-lg" type="submit" value="Register">
       </form>
