--- a/partial_views/reviewPartial.html
+++ b/partial_views/reviewPartial.html
@@ -1,5 +1,6 @@
+
 <div class="container text-center">
-    <h1 class="pt-5">Our Organizers</h1>
+    <h1 class="pt-5">Our Organisers</h1>
     <h5>Thank you! So much for your help!</h5>
     <div class="row py-5">
         <div class="review-container py-5"  style="text-align: center;">
