--- a/partial_views/preorderPartial.html
+++ b/partial_views/preorderPartial.html
@@ -1,81 +1,88 @@
 <div class="container text-center pb-5">
       <h1 class="py-5">Prices and Perks!</h1>
-      <div class="container pricing">
-            <div class="row">
+      <div class="row product-review-container">
 
-                  <!-- Standard -->
-                  <div class="col-lg-4">
-                        <div class="card mb-5 mb-lg-0">
-                              <div class="card-body">
-                                    <h5 class="card-title pt-2">GitHub Pro</h5>
-                                    <hr class="mt-4">
-                                    <ul class="fa-ul py-2">
-                                          <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants will have the opportunity to receive GitHub Pro for free!</li>
-                                    
-                                    </ul>
-                              </div>
-                        </div>
-                  </div>
 
-                  <!-- Premium -->
-                  <div class="col-lg-4">
-                        <div class="card card mb-5 mb-lg-0">
-                              <div class="card-body">
-                                    <h5 class="card-title pt-2">Over $45,000 in Software</h5>
-                                    <hr class="mt-4">
-                                    <ul class="fa-ul py-2">
-                                          <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants will have access to GitHub's Student Pack which provides over $45,000 in software and stickers for free, with help of Hack Club and GitHub!</li>
-                                       
-                                    </ul>
-                              </div>
-                        </div>
-                  </div>
+            <!-- Standard -->
+            <div class="col-xl-3 col-md-6">
+                  <div class="card mb-5 mb-xl-0">
+                        <div class="card-body">
+                              <h5 class="card-title pt-2">GitHub Pro</h5>
+                              <hr class="mt-4">
+                              <ul class="fa-ul py-2">
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
+                                          will have the opportunity to receive GitHub Pro for free!</li>
 
-                  <!-- Co-Founder -->
-                  <div class="col-lg-4">
-                        <div class="card mb-5 mb-lg-0" id="co-founder-pack">
-                              <div class="card-body">
-                                    <h5 class="card-title pt-2">Swag and $20 Credit for Linode Services</h5>
-                                    <hr class="mt-4">
-                                    <ul class="fa-ul py-2">
-                                          <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants will receive $20 promo credit code for Linode Services!</li>
-                                    </ul>
-                              </div>
-                        </div>
-                  </div>
-                   <div class="col-lg-4">
-                        <div class="card mb-5 mb-lg-0" id="co-founder-pack">
-                              <div class="card-body">
-                                    <h5 class="card-title pt-2">Swag and $20 Credit for Linode Services</h5>
-                                    <hr class="mt-4">
-                                    <ul class="fa-ul py-2">
-                                          <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants will receive $20 promo credit code for Linode Services!</li>
-                                    </ul>
-                              </div>
-                        </div>
-                  </div>
-                     <div class="col-lg-4">
-                        <div class="card mb-5 mb-lg-0 mt-2" id="co-founder-pack">
-                              <div class="card-body">
-                                    <h5 class="card-title pt-2">Swag and $20 Credit for Linode Services</h5>
-                                    <hr class="mt-4">
-                                    <ul class="fa-ul py-2">
-                                          <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants will receive $20 promo credit code for Linode Services!</li>
-                                    </ul>
-                              </div>
-                        </div>
-                  </div>
-                   <div class="col-lg-4">
-                        <div class="card mb-5 mb-lg-0" id="co-founder-pack">
-                              <div class="card-body">
-                                    <h5 class="card-title pt-2">Swag and $20 Credit for Linode Services</h5>
-                                    <hr class="mt-4">
-                                    <ul class="fa-ul py-2">
-                                          <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants will receive $20 promo credit code for Linode Services!</li>
-                                    </ul>
-                              </div>
+                              </ul>
                         </div>
                   </div>
             </div>
+
+            <!-- Premium -->
+            <div class="col-xl-3 col-md-6">
+                  <div class="card card mb-5 mb-lg-0">
+                        <div class="card-body">
+                              <h5 class="card-title pt-2">Over $45,000 in Software</h5>
+                              <hr class="mt-4">
+                              <ul class="fa-ul py-2">
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
+                                          will have access to GitHub's Student Pack.
+                                    </li>
+
+                              </ul>
+                        </div>
+                  </div>
+            </div>
+
+            <!-- Co-Founder -->
+            <div class="col-xl-3 col-md-6">
+                  <div class="card mb-5 mb-lg-0" id="co-founder-pack">
+                        <div class="card-body">
+                              <h5 class="card-title pt-2">Swag and $20 Credit</h5>
+                              <hr class="mt-4">
+                              <ul class="fa-ul py-2">
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
+                                          will receive $20 promo credit code for Linode Services!</li>
+                              </ul>
+                        </div>
+                  </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                  <div class="card mb-5 mb-lg-0" id="co-founder-pack">
+                        <div class="card-body">
+                              <h5 class="card-title pt-2">Swag and $20 Credit</h5>
+                              <hr class="mt-4">
+                              <ul class="fa-ul py-2">
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
+                                          will receive $20 promo credit code for Linode Services!</li>
+                              </ul>
+                        </div>
+                  </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                  <div class="card mb-5 mb-lg-0 mt-2" id="co-founder-pack">
+                        <div class="card-body">
+                              <h5 class="card-title pt-2">Swag and $20 Credit</h5>
+                              <hr class="mt-4">
+                              <ul class="fa-ul py-2">
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
+                                          will receive $20 promo credit code for Linode Services!</li>
+                              </ul>
+                        </div>
+                  </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                  <div class="card mb-5 mb-lg-0 mt-2" id="co-founder-pack">
+                        <div class="card-body">
+                              <h5 class="card-title pt-2">Swag and $20 Credit</h5>
+                              <hr class="mt-4">
+                              <ul class="fa-ul py-2">
+                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
+                                          will receive $20 promo credit code for Linode Services!</li>
+                              </ul>
+                        </div>
+                  </div>
+            </div>
+
       </div>
 </div>
