--- a/partial_views/reviewPartial.html
+++ b/partial_views/reviewPartial.html
@@ -1,19 +1,27 @@
 
 <div class="container text-center">
-    <h1 class="pt-5">Our Organisers</h1>
-    <h5>Thank you! So much for your help!</h5>
-    <div class="row py-5">
-        <div class="review-container py-5"  style="text-align: center;">
+    <h1 class="pt-5">Our Organiser's</h1>
+    <h5>Thank you!<br>
+        So much for your help!</h5>
+    <div class="row">
+        <div class="column">
             <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team1.jpg" alt="" />
-            <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team2.jpg" alt="" />
-
-            <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team3.jpg" alt="" />
-            <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team4.jpg" alt="" />
-
-
-
         </div>
+
+
+        <img style="padding-left: 5px;" class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team2.jpg" alt="" />
+
+
+        <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team3.jpg" alt="" />
+        <div class="column">
+
+        <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team4.jpg" alt="" />
+        </div>
+
+
+
     </div>
+</div>
 </div>
 </div>
 </div>
