--- a/partial_views/footerPartial.html
+++ b/partial_views/footerPartial.html
@@ -17,9 +17,7 @@
                   <a class="btn btn-neutral btn-icon btn-facebook btn-round btn-lg ml-3"
                         href="https://www.linkedin.com/company/script-foundation-india/"><i
                               class="fab fa-linkedin"></i></a>
-                  <p class="copyright mt-4 pt-1"><img src="../logo.png"> &copy; Designed by Script</p>
+                  <p class="copyright mt-4 pt-1"><img src="../script.png"> &copy; <b> Designed by Script</b></p>
             </div>
       </div>
-
-
 
