--- a/partial_views/reviewPartial.html
+++ b/partial_views/reviewPartial.html
@@ -1,4 +1,3 @@
-
 <div class="container text-center">
     <h1 class="pt-5">Our Organiser's</h1>
     <h5>Thank you!<br>
@@ -9,14 +8,18 @@
         </div>
 
 
-        <img style="padding-left: 5px;" class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team2.jpg" alt="" />
 
+        <img style="padding-left: 5px;" class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team2.jpg"
+            alt="" />
 
-        <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team3.jpg" alt="" />
         <div class="column">
 
-        <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team4.jpg" alt="" />
+            <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team3.jpg" alt="" />
         </div>
+
+
+        <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team4.jpg" alt="" />
+
 
 
 
@@ -25,3 +28,4 @@
 </div>
 </div>
 </div>
+
