--- a/partial_views/mailchimpPartial.html
+++ b/partial_views/mailchimpPartial.html
@@ -1,17 +1,30 @@
 <div class="container text-center">
 <!--      <img class="n-logo" src="src/img/logo.png" alt="">-->
       <h1>Our Sponsors</h1>
-     <div class="row py-5">
-            <div class="review-container py-5">
-             <img class="  mt-4 review-image new-items p-2" src="/src/img/sponsors.jpg"/>
-
-            <img class="  mt-4 review-image new-items p-2" src="/src/img/cb.png" alt="" />
-
-            <img class="  mt-4 review-image new-items p-2" src="/src/img/hosting.png" alt="" />
-
-            <img class="  mt-4 review-image new-items p-2" src="/src/img/XYZ-domain.png" alt="" />
-  
-
-         </div>
-    </div>
+	<div class="container">
+						<div class="row">
+							<div class="col-md">
+								<div class="testimonial-item">
+									<img class=" mt-5" src="/src/img/hosting.png" alt="">
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="testimonial-item">
+									<img class="mt-5 xyz" src="/src/img/XYZ-domain.png" alt="">
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="testimonial-item">
+									<img class="mt-5 " src="/src/img/cb.png" alt="">
+								</div>
+							</div>
+						</div>
+                            <div class="row">
+                             <div class="col-md">
+								<div class="testimonial-item">
+									<img class="mt-5" src="/src/img/sponsors.jpg" alt="">
+								</div>
+							</div>
+                            </div>
+					</div>
 </div>
