--- a/partial_views/preorderPartial.html
+++ b/partial_views/preorderPartial.html
@@ -7,11 +7,10 @@
             <div class="col-xl-3 col-md-6">
                   <div class="card mb-5 mb-xl-0">
                         <div class="card-body">
-                              <h5 class="card-title pt-2">GitHub Pro</h5>
+                              <h5 class="card-title pt-2">Coming Soon!</h5>
                               <hr class="mt-4">
                               <ul class="fa-ul py-2">
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
-                                          will have the opportunity to receive GitHub Pro for free!</li>
+                                    <li><span class="fa-li"><i class="fas"></i></span></li>
 
                               </ul>
                         </div>
@@ -22,11 +21,10 @@
             <div class="col-xl-3 col-md-6">
                   <div class="card card mb-5 mb-lg-0">
                         <div class="card-body">
-                              <h5 class="card-title pt-2">Over $45,000 in Software</h5>
+                              <h5 class="card-title pt-2">Coming Soon!</h5>
                               <hr class="mt-4">
                               <ul class="fa-ul py-2">
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
-                                          will have access to GitHub's Student Pack.
+                                    <li><span class="fa-li"><i class="fas "></i></span>
                                     </li>
 
                               </ul>
@@ -38,11 +36,10 @@
             <div class="col-xl-3 col-md-6">
                   <div class="card mb-5 mb-lg-0" id="co-founder-pack">
                         <div class="card-body">
-                              <h5 class="card-title pt-2">Swag and $20 Credit</h5>
+                              <h5 class="card-title pt-2">Coming Soon!</h5>
                               <hr class="mt-4">
                               <ul class="fa-ul py-2">
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
-                                          will receive $20 promo credit code for Linode Services!</li>
+                                    <li><span class="fa-li"><i class="fas "></i></span></li>
                               </ul>
                         </div>
                   </div>
@@ -50,35 +47,10 @@
             <div class="col-xl-3 col-md-6">
                   <div class="card mb-5 mb-lg-0" id="co-founder-pack">
                         <div class="card-body">
-                              <h5 class="card-title pt-2">Swag and $20 Credit</h5>
+                              <h5 class="card-title pt-2">Coming Soon!</h5>
                               <hr class="mt-4">
                               <ul class="fa-ul py-2">
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
-                                          will receive $20 promo credit code for Linode Services!</li>
-                              </ul>
-                        </div>
-                  </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-                  <div class="card mb-5 mb-lg-0 mt-2" id="co-founder-pack">
-                        <div class="card-body">
-                              <h5 class="card-title pt-2">Swag and $20 Credit</h5>
-                              <hr class="mt-4">
-                              <ul class="fa-ul py-2">
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
-                                          will receive $20 promo credit code for Linode Services!</li>
-                              </ul>
-                        </div>
-                  </div>
-            </div>
-            <div class="col-xl-3 col-md-6">
-                  <div class="card mb-5 mb-lg-0 mt-2" id="co-founder-pack">
-                        <div class="card-body">
-                              <h5 class="card-title pt-2">Swag and $20 Credit</h5>
-                              <hr class="mt-4">
-                              <ul class="fa-ul py-2">
-                                    <li><span class="fa-li"><i class="fas fa-check"></i></span>All participants
-                                          will receive $20 promo credit code for Linode Services!</li>
+                                    <li><span class="fa-li"><i class="fas"></i></span></li>
                               </ul>
                         </div>
                   </div>
