--- a/partial_views/reviewPartial.html
+++ b/partial_views/reviewPartial.html
@@ -1,31 +1,64 @@
 <div class="container text-center">
+            <h1 class="pt-5">Our Technical Team</h1>
+   	<div class="container">
+						<div class="row">
+							<div class="col-md">
+								<div class="testimonial-item">
+                                    <a href="https://www.linkedin.com/in/utsav-kuchhal-8875a218a/"><img class="rounded-circle img-raised" src="/src/img/utsav.jpg" alt=""></a>
+									<h5>Utsav </h5>
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="testimonial-item">
+									<a href="https://www.linkedin.com/in/avni-goel-4045aa184"><img class="rounded-circle img-raised" src="/src/img/Avni.jpeg" alt=""></a>
+									<h5>Avni </h5>
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="testimonial-item">
+									<a href="https://www.linkedin.com/in/ishitachitkara"><img class="rounded-circle img-raised" src="/src/img/ishita.jpeg" alt=""></a>
+									<h5>Ishita </h5>
+								</div>
+							</div>
+                            <div class="col-md">
+								<div class="testimonial-item">
+									<a href="https://www.linkedin.com/in/ritwik-sinha-8854a2146/"><img class="rounded-circle img-raised" src="/src/img/ritvik.jpeg" alt=""></a>
+									<h5>Ritwik </h5>
+								</div>
+							</div>
+						</div>
+					</div>
     <h1 class="pt-5">Our Organiser's</h1>
-    <h5>Thank you!<br>
-        So much for your help!</h5>
-    <div class="row">
-        <div class="column">
-            <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team1.jpg" alt="" />
-        </div>
+	<div class="container">
+        
+						<div class="row">
+							<div class="col-md">
+								<div class="testimonial-item">
+									<a href="https://www.linkedin.com/in/priyal-bhatewara/"><img class="rounded-circle img-raised" src="/src/img/Team2.jpg" alt=""></a>
+									<h5>Priyal </h5>
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="testimonial-item">
+									<a href="https://www.linkedin.com/in/pranjali-singh-92314673/"><img class="rounded-circle img-raised" src="/src/img/Team1.jpg" alt=""></a>
+									<h5>Pranjali </h5>
+								</div>
+							</div>
+							<div class="col-md">
+								<div class="testimonial-item">
+									<a href="https://www.linkedin.com/in/hemshree-madaan/"><img class="rounded-circle img-raised" src="/src/img/Team3.jpg" alt=""></a>
+									<h5>Hemshree </h5>
+								</div>
+							</div>
+                            <div class="col-md">
+								<div class="testimonial-item">
+									<a href="https://www.linkedin.com/in/sanchibansal340/"><img class="rounded-circle img-raised" src="/src/img/Team4.jpg" alt=""></a>
+									<h5>Sanchi Bansal</h5>
+								</div>
+							</div>
+						</div>
+					</div>
 
-
-
-        <img style="padding-left: 5px;" class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team2.jpg"
-            alt="" />
-
-        <div class="column">
-
-            <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team3.jpg" alt="" />
-        </div>
-
-
-        <img class="rounded-circle img-raised mt-4 review-image" src="/src/img/Team4.jpg" alt="" />
-
-
-
-
-    </div>
 </div>
-</div>
-</div>
-</div>
+
 
