--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" id="navbar">
       <div class="container">
             <div class="navbar-translate">
-                  <a class="navbar-brand" onclick="scrollToElement('#header-section', 400);">Delhi Hacks</a>
+                  <img class="logo" onclick="scrollToElement('#header-section', 400);" src="../script.png"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse">
                         <span class="navbar-toggler-bar bar1"></span>
                         <span class="navbar-toggler-bar bar1"></span>
